service.yml
apiVersion: v1
kind: Service
metadata:
  name: hotstar-service
  namespace: hotstar
spec:
  selector:
    app: hotstar
  ports:
    - protocol: TCP
      port: 80  # Port exposed by the service externally (outside the cluster)
      targetPort: 3000  # Port your application listens on inside the pods
  type: LoadBalancer
