ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hotstar1
  name: ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-0f500263aa83cb317,	subnet-057bc115c8cf23969
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:992382496367:certificate/649469a3-becc-4d20-8b04-feced113e264
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443},]'
    alb.ingress.kubernetes.io/group.name: app
    alb.ingress.kubernetes.io/actions.ssl-redirect: >-
        {
            "Type": "redirect",
            "RedirectConfig": {
                "Protocol": "HTTPS",
                "Port": "443",
                "Host": "#{host}",
                "Path": "/#{path}",
                "Query": "#{query}",
                "StatusCode": "HTTP_301"
            }
        }
spec:
  rules:
     - host: "hotstar.hackerboypk.online"  ##Replace the host value with your desired custom domain 
       http:
        paths:
          - path: "/hotstar"
            pathType: Prefix
            backend:
             service:
              name: hotstar-service
              port:
               name: use-annotation
          - path: "/hotstar"
            pathType: Prefix
            backend:
              service:
                name: hotstar-service ##Replace service name example with SVC that you created during the sample application deployment
                port:
                  number: 3000 ##Replace 80 with application port number
